# hashcode-2021

./: README.md  package.json  pyproject.toml  script.py  script2.py  strade_per_centro.py  tsconfig.json
output/: b.txt  c.txt  d.txt  e.txt  f.txt
src/: index.ts
